updating README.md

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                 
             </div>
             <div class="playerSkills">
-                <button class="skills" onclick="consoleHello()">Flame<br>Shuriken</button>
-                <button class="skills">Leaf<br>Shuriken</button>
-                <button class="skills">Rock<br>Shuriken</button>
+                <button class="skillsBtn" onclick="consoleHello()">Flame<br>Shuriken</button>
+                <button class="skillsBtn">Leaf<br>Shuriken</button>
+                <button class="skillsBtn">Rock<br>Shuriken</button>
             </div>
         </div>
     </div>
