monsterArray update, added typeMatch, created class Ninja

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="enemyBox ">
                 <div class="enemyInfo">
                     <img src="/charactersMedia/greenTeam/Octopus/Faceset21.png" alt="enemy avatar">
-                    <h1>Octopus</h1>
+                    <h1>Green Ninja</h1>
                     <ul>
                         <li>
                             <h2>HP <span id="enemyCurrentHealth">5</span> / <span id="enemyMaxHealth">5</span></h2>
