--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <div class="container">
             <div class="enemyBox ">
                 <div class="enemyInfo">
-                    <img src="/charactersMedia/greenTeam/Octopus/Faceset21.png" alt="enemy avatar">
-                    <h1>Green Ninja</h1>
+                    <img id="enemyImg" src="/charactersMedia/greenTeam//GreenNinja/Faceset.png" alt="enemy avatar">
+                    <h1><span id="enemyName"></span></h1>
                     <ul>
                         <li>
-                            <h2>HP <span id="enemyCurrentHealth">5</span> / <span id="enemyMaxHealth">5</span></h2>
+                            <h2>HP <span id="enemyCurrentHealth"></span> / <span id="enemyMaxHealth"></span></h2>
                         </li>
                         <li>
                             <h2>STR <span id="enemyStrength">3</span></h2>
@@ -33,7 +33,7 @@
                     </ul>
                 </div>
             </div>
-            
+
             <div class="enemyAnimation">
 
             </div>
@@ -53,19 +53,18 @@
                         </li>
                     </ul>
                 </div>
-                
+
             </div>
             <div class="playerAnimation">
 
             </div>
             <div class="playerSkills">
                 <button id="btnFire" class="skillsBtn">Flame<br>Shuriken</button>
-                <button class="skillsBtn">Leaf<br>Shuriken</button>
-                <button class="skillsBtn">Rock<br>Shuriken</button>
+                <button id="btnLeaf" class="skillsBtn">Leaf<br>Shuriken</button>
+                <button id="btnEarth" class="skillsBtn">Earth<br>Shuriken</button>
             </div>
         </div>
     </div>
-    <script src="/scripts/index.js"></script>
     <script src="/scripts/game.js"></script>
 </body>
 
