Updated some styles, got the game.js organized and some html changes

--- a/index.html
+++ b/index.html
@@ -25,39 +25,39 @@
                             <h2>HP <span id="enemyCurrentHealth"></span> / <span id="enemyMaxHealth"></span></h2>
                         </li>
                         <li>
-                            <h2>STR <span id="enemyStrength">3</span></h2>
+                            <h2>STR <span id="enemyStrength"></span></h2>
                         </li>
                         <li>
-                            <h2>DEF <span id="enemyDefense">0</span></h2>
+                            <h2>DEF <span id="enemyDefense"></span></h2>
                         </li>
                     </ul>
                 </div>
             </div>
 
-            <div class="enemyAnimation">
+            <!-- <div class="enemyAnimation">
 
-            </div>
+            </div> -->
             <div class="playerBox">
                 <div class="playerInfo">
                     <img src="/charactersMedia/Player/DarkNinja/Faceset.png">
                     <h1>Black Ninja</h1>
                     <ul>
                         <li>
-                            <h2>HP <span id="currentHealth">12</span> / <span id="maxHealth">12</span></h2>
+                            <h2>HP <span id="currentHealth">60</span> / <span id="maxHealth">60</span></h2>
                         </li>
                         <li>
-                            <h2>STR <span id="strength">3</span></h2>
+                            <h2>STR <span id="strength">8</span></h2>
                         </li>
                         <li>
-                            <h2>DEF <span id="defence"> 0</span></h2>
+                            <h2>DEF <span id="defence"> 4</span></h2>
                         </li>
                     </ul>
                 </div>
 
             </div>
-            <div class="playerAnimation">
+            <!-- <div class="playerAnimation">
 
-            </div>
+            </div> -->
             <div class="playerSkills">
                 <button id="btnFire" class="skillsBtn">Flame<br>Shuriken</button>
                 <button id="btnLeaf" class="skillsBtn">Leaf<br>Shuriken</button>
