Fixed the logic

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
             </div>
             <div class="playerAnimation">
-                <h2 id="battleComment"></h2>
+                <h2 id="battleComment">Make a move!</h2>
             </div>
             <div class="playerSkills">
                 <button id="btnFire" class="skillsBtn">Flame<br>Shuriken</button>
