Added the player scoreboard

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                 </div>
             </div>
 
-            <!-- <div class="enemyAnimation">
-
-            </div> -->
+            <div class="scoreboardContainer">
+                <h1>Score: <span id="scoreboard"></span></h1>
+            </div>
             <div class="playerBox">
                 <div class="playerInfo">
                     <img src="/charactersMedia/Player/DarkNinja/Faceset.png">
