Added game sounds, play button and some styles

--- a/index.html
+++ b/index.html
@@ -55,16 +55,34 @@
                 </div>
 
             </div>
-            <div class="playerAnimation">
-                <h2 id="battleComment">Make a move!</h2>
+            <div class="battleCommentary">
+                <h2 id="battleComment">Press PLAY</h2>
             </div>
+
             <div class="playerSkills">
-                <button id="btnFire" class="skillsBtn">Flame<br>Shuriken</button>
-                <button id="btnLeaf" class="skillsBtn">Leaf<br>Shuriken</button>
-                <button id="btnWater" class="skillsBtn">Water<br>Shuriken</button>
+                <button id="btnFire" class="skillsBtn displayNone">Flame<br>Shuriken</button>
+                <button id="btnLeaf" class="skillsBtn displayNone">Leaf<br>Shuriken</button>
+                <button id="btnWater" class="skillsBtn displayNone">Water<br>Shuriken</button>
+                <button id="gameStart" class="btnPlay">PLAY</button>
+            </div>
+
+            <div>
+                <ul class="footer">
+                    <li><button class="toggleMusic"></button></li>
+                    <li></li>
+                    <li></li>
+                </ul>
             </div>
         </div>
     </div>
+
+    <audio id="winAudio" src="/sounds/Success3.wav"></audio>
+    <audio src="/sounds/water.wav"></audio>
+    <audio id="playerAttackAudio" src="/sounds/leafShuriken.wav"></audio>
+    <audio id="enemyAttackAudio" src="/sounds/fireShuriken.wav"></audio>
+    <audio id="gameOverAudio" src="/sounds/gameOverSong.wav"></audio>
+    <audio id="scoreAudio" src="/sounds/coin.wav"></audio>
+    <audio id="bgAudio" class="bgAudioActive" loop="true" src="/sounds/gameSong.ogg" preload="auto"></audio>
     <script src="/scripts/game.js"></script>
 </body>
 
