--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
             <div class="playerBox">
                 <div class="playerInfo">
-                    <img src="/charactersMedia/Player/DarkNinja/Faceset.png">
+                    <img src="./charactersMedia/Player/DarkNinja/Faceset.png">
                     <h1 id="playerName">Black Ninja</h1>
                     <ul>
                         <li>
@@ -77,14 +77,14 @@
         </div>
     </div>
 
-    <audio id="winAudio" src="/sounds/Success3.wav"></audio>
-    <audio src="/sounds/water.wav"></audio>
-    <audio id="playerAttackAudio" src="/sounds/leafShuriken.wav"></audio>
-    <audio id="enemyAttackAudio" src="/sounds/fireShuriken.wav"></audio>
-    <audio id="gameOverAudio" src="/sounds/gameOverSong.wav"></audio>
-    <audio id="scoreAudio" src="/sounds/coin.wav"></audio>
-    <audio id="bgAudio" class="bgAudioActive" loop="true" src="/sounds/gameSong.ogg" preload="auto"></audio>
-    <script src="/scripts/game.js"></script>
+    <audio id="winAudio" src="./sounds/Success3.wav"></audio>
+    <audio src="./sounds/water.wav"></audio>
+    <audio id="playerAttackAudio" src="./sounds/leafShuriken.wav"></audio>
+    <audio id="enemyAttackAudio" src="./sounds/fireShuriken.wav"></audio>
+    <audio id="gameOverAudio" src="./sounds/gameOverSong.wav"></audio>
+    <audio id="scoreAudio" src="./sounds/coin.wav"></audio>
+    <audio id="bgAudio" class="bgAudioActive" loop="true" src="./sounds/gameSong.ogg" preload="auto"></audio>
+    <script src="./scripts/game.js"></script>
 </body>
 
 </html>
