--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <ul class="footer">
                     <li><button id="toggleMusic" class="toggleMusic">Music ON</button></li>
                     <li><button onclick="" class="credits"><a href="creditos.html" target="_blank">credits</a></button></li>
-                    <li><a href="https://www.linkedin.com/in/asanxdev/" target="_blank"><img src="/charactersMedia/img/linkedinIcon.png"  alt="linkin link"></a></li>
+                    <li><a href="https://www.linkedin.com/in/asanxdev/" target="_blank"><img src="./charactersMedia/img/linkedinIcon.png"  alt="linkin link"></a></li>
                     
                 </ul>
             </div>
