--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
 
             <div class="scoreboardContainer">
-                <h1>Score:  <span id="scoreboard">0</span></h1>
+                <h1>Score: <span id="scoreboard">0</span></h1>
             </div>
             <div class="playerBox">
                 <div class="playerInfo">
@@ -69,9 +69,11 @@
             <div>
                 <ul class="footer">
                     <li><button id="toggleMusic" class="toggleMusic">Music ON</button></li>
-                    <li><button onclick="" class="credits"><a href="creditos.html" target="_blank">credits</a></button></li>
-                    <li><a href="https://www.linkedin.com/in/asanxdev/" target="_blank"><img src="./charactersMedia/img/linkedinIcon.png"  alt="linkin link"></a></li>
-                    
+                    <li><button onclick="" class="credits"><a href="creditos.html" target="_blank">credits</a></button>
+                    </li>
+                    <li><a href="https://www.linkedin.com/in/asanxdev/" target="_blank"><img
+                                src="./charactersMedia/img/linkedinIcon.png" alt="linkin link"></a></li>
+
                 </ul>
             </div>
         </div>
