Added media query

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./charactersMedia/img/favicon.ico" type="image/x-icon">
     <title>Ninja Tournament</title>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,7 +20,7 @@
             <div class="enemyBox ">
                 <div class="enemyInfo">
                     <img id="enemyImg">
-                    <h1><span id="enemyName"></span></h1>
+                    <h1 id="enemyName"></h1>
                     <ul>
                         <li>
                             <h2>HP <span id="enemyCurrentHealth"></span> / <span id="enemyMaxHealth"></span></h2>
