Excluded non-used media and reorganized the code to be more readable

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./charactersMedia/img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./media/img/favicon.ico" type="image/x-icon">
     <title>Ninja Tournament</title>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -40,7 +40,7 @@
             </div>
             <div class="playerBox">
                 <div class="playerInfo">
-                    <img src="./charactersMedia/Player/DarkNinja/Faceset.png">
+                    <img src="./media/Player/Faceset.png">
                     <h1 id="playerName">Black Ninja</h1>
                     <ul>
                         <li>
@@ -73,7 +73,7 @@
                     <li><button onclick="" class="credits"><a href="creditos.html" target="_blank">credits</a></button>
                     </li>
                     <li><a href="https://www.linkedin.com/in/asanxdev/" target="_blank"><img
-                                src="./charactersMedia/img/linkedinIcon.png" alt="linkin link"></a></li>
+                                src="./media/img/linkedinIcon.png" alt="linkin link"></a></li>
 
                 </ul>
             </div>
